[gd_scene load_steps=8 format=2]

[ext_resource path="res://Dices/Roll_dices.gd" type="Script" id=1]
[ext_resource path="res://UI/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Dices/dice_nb.png" type="Texture" id=3]
[ext_resource path="res://Dices/dice_df.png" type="Texture" id=4]
[ext_resource path="res://UI/GloriaHallelujah.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="Roll_dices" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.270588, 0.270588, 0.270588, 1 )
polygon = PoolVector2Array( 128, 64, 896, 64, 896, 536, 128, 536 )

[node name="Button" type="Button" parent="."]
margin_left = 424.0
margin_top = 448.0
margin_right = 600.0
margin_bottom = 516.0
custom_fonts/font = SubResource( 1 )
text = "ROLL"

[node name="Dice_nb" type="Sprite" parent="."]
position = Vector2( 320, 224 )
texture = ExtResource( 3 )
hframes = 4
vframes = 3

[node name="Dice_df" type="Sprite" parent="."]
position = Vector2( 704, 224 )
texture = ExtResource( 4 )
hframes = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="info" type="Label" parent="."]
margin_left = 232.0
margin_top = 328.0
margin_right = 360.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 2 )
text = "From         to"

[node name="nb_low" type="Sprite" parent="."]
position = Vector2( 299, 344 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 3 )
hframes = 4
vframes = 3

[node name="nb_high" type="Sprite" parent="."]
position = Vector2( 384, 344 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 3 )
hframes = 4
vframes = 3

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
